# libs

./: README.md
clipboard-perl/source/required/: changelog  control  copyright
common-bash/debianise/debian-files/: changelog  control  copyright  libdncommon-bash.config  libdncommon-bash.postinst  libdncommon-bash.postrm  libdncommon-bash.prerm  libdncommon-bash.templates  rules
common-bash/debianise/scripts/: build-deb  deb-dir-prepare  gen-helper-files  gen-helper-files.1  tar-dir-prepare
common-bash/debianise/source/: libdncommon-bash_5.24-2_amd64.deb  libdncommon-bash_5.24-3_amd64.deb  libdncommon-bash_5.25-1_amd64.deb  libdncommon-bash_5.30-1_amd64.deb  libdncommon-bash_6.2-1_amd64.deb  libdncommon-bash_6.4-1_amd64.deb  libdncommon-bash_6.9-1_amd64.deb  libdncommon-bash_7.1-1_amd64.deb  libdncommon-bash_7.10-1_amd64.deb  libdncommon-bash_7.11-1_amd64.deb  libdncommon-bash_7.3-1_amd64.deb  libdncommon-bash_7.5-1_amd64.deb  libdncommon-bash_7.7-1_amd64.deb  libdncommon-bash_7.8-1_amd64.deb
common-bash/tarball/autotools/: AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS  README  configure.ac
common-bash/tarball/autotools/libs/: Makefile.am
common-bash/tarball/autotools/man/: Makefile.am
common-bash/tarball/autotools/misc/: Makefile.am
common-bash/tarball/autotools/store/: Makefile.am
common-bash/tarball/autotools/vim/: Makefile.am
common-perl/source/: Build.PL  Changes  META.json  README.md  cpanfile  dist.ini
common-perl/source/required/: changelog  control  copyright
common-perl/source/t/: basic.t
common-vars/debianise/debian-files/: changelog  control  copyright  rules
common-vars/debianise/scripts/: build-deb  deb-dir-prepare  tar-dir-prepare
common-vars/debianise/source/: libdncommon-vars_2.2-2_all.deb  libdncommon-vars_2.2-3_all.deb
common-vars/tarball/autotools/: AUTHORS  ChangeLog  Makefile.am  NEWS  README  configure.ac
common-vars/tarball/source/: libdncommon-vars.1.in  libdncommon-varsrc.in
commonbash-perl/source/: .gitignore  Changes  LICENSE  META.json  README.md  cpanfile  dist.ini
commonbash-perl/source/required/: changelog  control  copyright
commonbash-perl/source/t/: basic.t
curses-widget-listbox-dnlistbox/debianise/debian-files/: changelog  control  copyright
curses-widget-listbox-dnlistbox/debianise/scripts/: build-deb  deb-dir-prepare  tar-dir-prepare
curses-widget-listbox-dnlistbox/debianise/source/: libcurses-widgets-listbox-dnlistbox-perl_1.2-1_all.deb
curses-widget-listbox-dnlistbox/source/: Abstract  Changes
curses-widget-listbox-dnlistbox/source/required/: control  copyright
curses-widget-listbox-dnlistbox/source/t/: Curses-Widgets-ListBox-DnListBox.t
curses-widget-listbox-dnlistbox/tarball/source/: MANIFEST  README
desktop-detect-perl/: libdesktop-detect-perl_0.03-1.debian.tar.xz  libdesktop-detect-perl_0.03-1_all.deb  libdesktop-detect-perl_0.03-1_amd64.build  libdesktop-detect-perl_0.03-1_amd64.changes
desktop-detect-perl/Desktop-Detect-0.03/: MYMETA.json  MYMETA.yml  Makefile
desktop-detect-perl/Desktop-Detect-0.03/debian/: changelog  control  copyright  files  watch
file-dirsync-perl/source/: MYMETA.json  MYMETA.yml  Makefile
file-dirsync-perl/source/required/: changelog  control  copyright
images-extractpdfpages-perl/source/: Build.PL  Changes  LICENSE  META.json  README.md  cpanfile  dist.ini
images-extractpdfpages-perl/source/required/: changelog  control  copyright
images-extractpdfpages-perl/source/script/: dn-images-extract-pdf-pages
images-extractpdfpages-perl/source/t/: basic.t
images-extractregions-perl/source/: Build.PL  Changes  LICENSE  META.json  README.md  cpanfile  dist.ini
images-extractregions-perl/source/required/: changelog  control  copyright  libdn-images-extractregions-perl.install
images-extractregions-perl/source/script/: dn-images-extract-regions
images-extractregions-perl/source/t/: basic.t
images-resize-perl/: libdn-images-resize-perl.bash-completion
images-resize-perl/source/: Changes  META.json  README.md  cpanfile  dist.ini
images-resize-perl/source/required/: changelog  control  copyright  libdn-images-resize-perl.install
images-resize-perl/source/script/: dn-images-printerstudio-resize  dn-images-resize
images-resize-perl/source/t/: basic.t
images-uniquefy-perl/source/: Changes  META.json  README.md  cpanfile  dist.ini
images-uniquefy-perl/source/t/: basic.t
interactiveio-perl/source/: Build.PL  Changes  LICENSE  META.json  README.md  cpanfile  dist.ini
mail-dir-monitor/source/: Changes  META.json  README.md  cpanfile
mboxen-split-perl/source/: Build.PL  Changes  LICENSE  META.json  README.md  cpanfile  dist.ini
menu-perl/source/: Changes  README.md  cpanfile  dist.ini
moosex-immutable-perl/: libmoosex-makeimmutable-perl_0.02-1.debian.tar.xz  libmoosex-makeimmutable-perl_0.02-1_all.deb  libmoosex-makeimmutable-perl_0.02-1_amd64.build  libmoosex-makeimmutable-perl_0.02-1_amd64.changes
moosex-immutable-perl/MooseX-MakeImmutable-0.02/: MYMETA.json  MYMETA.yml  Makefile
moosex-immutable-perl/required/: changelog  control  copyright
perl-critic-moose-perl/: libperl-critic-moose-perl_1.05-1.debian.tar.xz  libperl-critic-moose-perl_1.05-1_all.deb  libperl-critic-moose-perl_1.05-1_amd64.build  libperl-critic-moose-perl_1.05-1_amd64.buildinfo  libperl-critic-moose-perl_1.05-1_amd64.changes
perl-critic-moose-perl/Perl-Critic-Moose-1.05/: MYMETA.json  MYMETA.yml  Makefile
perl-critic-moose-perl/required/: changelog  control  copyright
perl-osnames-perl/: README.md  libperl-osnames-perl_0.11-1.debian.tar.xz  libperl-osnames-perl_0.11-1_all.deb  libperl-osnames-perl_0.11-1_amd64.build  libperl-osnames-perl_0.11-1_amd64.changes
perl-osnames-perl/Perl-osnames-0.11/: MYMETA.json  MYMETA.yml  Makefile
role-mp3-perl/source/: .gitignore  Build.PL  Changes  META.json  README.md  dist.ini
role-utilities-perl/source/: Changes  LICENSE  README.md  cpanfile  dist.ini
time-simple-perl/source/: MYMETA.json  MYMETA.yml  Makefile
types-dn-perl/source/: Build.PL  Changes  LICENSE  META.json  README.md  cpanfile  dist.ini
(+192 files in other folders)
