# Makefile.am file for the libdncommon-bash project

# subdir: 'libs'

# Library files (use 'scripts' to make executable to avoid lintian warning)
pkglibexec_SCRIPTS = liball libinternet libstrings libarrays libtime libcontrol liblists libuser-interaction libconvert libdvd libnumbers libvariables libdevices libfiles libprogram-interaction
