# Makefile.am file for the libdncommon-bash project

# subdir: 'vim'

# Directories
vimftplugdir = @vim_ftplugin@
vimftplcbdir = @vim_libdncb@
vimdocdir    = @vim_doc@
vimregdir    = @vim_reg@

# Vim plugin
vimftplug_DATA = sh_libdncommon-bash.vim

# Vim plugin help
vimdoc_DATA    = libdncommon-bash-shell-ftplugin.txt

# Vim registry
vimreg_DATA    = libdncommon-bash.yaml

# Dictionary and loader files
vimftplcb_DATA = funcdict funcload.vim libfile-functions.vim
