# Makefile.am file for the libdncommon-bash project

# subdir: 'vim'

# Directories
#vimftplugdir    = @vim_ftplugin@
#vimftplcbdir    = @vim_libdncb@
nvimftplcbdir    = @nvim_libdncb@
#vimdocdir       = @vim_doc@
#vimregdir       = @vim_reg@
nvimdocdir      = @nvim_doc@
nvimftplugshdir = @nvim_ftplugin_sh@
#nvimreqdir      = @nvim_require@

# Vim plugin
#vimftplug_DATA      = sh_libdncommon-bash.vim

# Vim plugin help
#vimdoc_DATA         = libdncommon-bash-shell-ftplugin.txt

# Vim registry
#vimreg_DATA         = libdncommon-bash.yaml

# Nvim plugin
nvimftplugsh_DATA = libdncommon-bash.lua

# Nvim plugin help
nvimdoc_DATA      = libdncommon-bash.txt

# Dictionary and loader files
nvimftplcb_DATA   = funcdict funcload.lua
